--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="on_going_all_out">ON GOING ALL OUT</string>
     <string name="dominate_the_league">Find a team in your city, and dominate the league.</string>
     <string name="get_started">GET STARTED</string>
+    <string name="beginner">Beginner</string>
+    <string name="baller">Baller</string>
+    <string name="finish">Finish</string>
+    <string name="i_am_a">I am a:</string>
 </resources>
