--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="baller">Baller</string>
     <string name="finish">Finish</string>
     <string name="i_am_a">I am a:</string>
+    <string name="select_league_toast">Please select a league</string>
+    <string name="search_league">Looking for a co-ed beginner league near you...</string>
+    <string name="skill_finish_toast">Please select a skill level</string>
 </resources>
